--- a/index.html
+++ b/index.html
@@ -1,79 +1,79 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>Elements of Geometry</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Elementsofgeometry : Elements of Geometry" />
+		<link rel="stylesheet" href="css/main.css" type="text/css" media="screen" title="no title" charset="utf-8"/>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+	</head>
+	<body>
+		<div id="wrapper">
+			<div id="title">
+				Elements of Geometry with Interactive Demonstrations
+			</div>
+			<div id="appicon"></div>
+			<div class="store stylefont">
 
-    <title>Elementsofgeometry</title>
-  </head>
+				<a class="stylefont" href="#" target="_blank"> <span  class="word1">$0.99</span> <span  class="word2">Go to the AppStore</span> <span class="word3">(universal app)</span> </a>
+			</div>
+			<div id="ipad">
+				<div id="ipadScreen">
+					<img src="img/ipadscreen01.png">
+				</div>
+			</div>
+			<div id="content">
+				<div class="slogan">
+					Turn you iPad into a geometry easy learnign book !
+				</div>
+				<div class="features normalfont">
+					<div class="column">
+						<h1>Classical in New Tech</h1>
+						Elements I is a book app. It is designed for students and teachers.
+						Elements I redesigns the classical geometry book - Euclid's Elements of Geometry in a new way.
+						With the new technology supporting, it is showing a vivid way to display the great mind contained in Euclid's Elements of Geometry.
+					</div>
+					<div class="column">
+						<h1>Interactive Demonstration</h1>
 
-  <body>
+						In this book app, the demonstrations are interactive, that are providing a easy way for you to control the geometry objects,
+						like change the length of a segment, move a point form one place to another and so on.
+						It makes geometry learing interesting.
+					</div>
+					<div class="column">
+						<h1>Real Simulation</h1>
+						Relationship between geometry objects in the demonstrations will be real show out. Following the radius of a circle changing, the size of this circle will change at the same time.
+					</div>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/sunbookseries/elementsofgeometry">View on GitHub</a>
+				</div>
+			</div>
 
-          <h1 id="project_title">Elementsofgeometry</h1>
-          <h2 id="project_tagline">Elements of Geometry</h2>
+		</div>
+		<div class="footer normalfont">
+			<p>
+				sunbookseries[at]gmail.com | © 2013 - SunBookSeries
+			</p>
+		</div>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/sunbookseries/elementsofgeometry/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/sunbookseries/elementsofgeometry/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+		<!-- AddThis Smart Layers BEGIN -->
+		<!-- Go to http://www.addthis.com/get/smart-layers to customize -->
+		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=xa-5210c6c07cf55cec"></script>
+		<script type="text/javascript">
+			addthis.layers({
+				'theme' : 'transparent',
+				'share' : {
+					'position' : 'left',
+					'numPreferredServices' : 5
+				},
+				'whatsnext' : {},
+				'recommended' : {
+					'title' : 'Recommended for you:'
+				}
+			});
+		</script>
+		<!-- AddThis Smart Layers END -->
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+	</body>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Elementsofgeometry maintained by <a href="https://github.com/sunbookseries">sunbookseries</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
 </html>
