add itunes href

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div id="appicon"></div>
 			<div class="store stylefont">
 
-				<a class="stylefont" href="#" target="_blank"> <span  class="word1">$0.99</span> <span  class="word2">Go to the AppStore</span> <span class="word3">(universal app)</span> </a>
+				<a class="stylefont" href="https://itunes.apple.com/us/app/elements-i/id689776416?mt=8" target="_blank"> <span  class="word1">$0.99</span> <span  class="word2">Go to the AppStore</span> <span class="word3">(universal app)</span> </a>
 			</div>
 			<div id="ipad">
 				<div id="ipadScreen">
