add elements III

--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 			<div id="title">
 				Elements of Geometry with Interactive Demonstrations
 			</div>
+			<div id="appicon3"></div>
+			<div class="store3 stylefont">
+				<a class="stylefont" href="#" target="_blank"> <span  class="word1">Free !</span> <span  class="word2">Go to the AppStore</span></a>
+			</div>
 			<div id="appicon"></div>
 			<div class="store stylefont">
-
-				<a class="stylefont" href="https://itunes.apple.com/us/app/elements-i/id689776416?mt=8" target="_blank"> <span  class="word1">$0.99</span> <span  class="word2">Go to the AppStore</span> <span class="word3">(universal app)</span> </a>
+				<a class="stylefont" href="https://itunes.apple.com/us/app/elements-i/id689776416?mt=8" target="_blank"> <span  class="word1">$0.99</span> <span  class="word2">Go to the AppStore</span></a>
 			</div>
 			<div id="ipad">
 				<div id="ipadScreen">
@@ -30,8 +33,8 @@
 				<div class="features normalfont">
 					<div class="column">
 						<h1>Classical in New Tech</h1>
-						Elements I is a book app. It is designed for students and teachers.
-						Elements I redesigns the classical geometry book - Euclid's Elements of Geometry in a new way.
+						Elements is a book app. It is designed for students and teachers.
+						Elements redesigns the classical geometry book - Euclid's Elements of Geometry in a new way.
 						With the new technology supporting, it is showing a vivid way to display the great mind contained in Euclid's Elements of Geometry.
 					</div>
 					<div class="column">
@@ -52,7 +55,7 @@
 		</div>
 		<div class="footer normalfont">
 			<p>
-				sunbookseries[at]gmail.com | © 2013 - SunBookSeries
+				yangguang200906[at]gmail.com | © 2013 - SunBookSeries
 			</p>
 		</div>
 
