--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			</div>
 			<div id="appicon3"></div>
 			<div class="store3 stylefont">
-				<a class="stylefont" href="#" target="_blank"> <span  class="word1">Free !</span> <span  class="word2">Go to the AppStore</span></a>
+				<a class="stylefont" href="https://itunes.apple.com/us/app/elements-iii/id704399921?ls=1&mt=8" target="_blank"> <span  class="word1">Free !</span> <span  class="word2">Go to the AppStore</span></a>
 			</div>
 			<div id="appicon"></div>
 			<div class="store stylefont">
